# tauri-specta

./: .gitignore  Cargo.toml  README.md  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml
crates/tauri-specta-query/: Cargo.toml  README.md
crates/tauri-specta-query/src/: lib.rs
docs/: tanstack-query-support.md  v1.md  v2.md
example/: package.json  pnpm-lock.yaml
example/src/: bindings.js  bindings.ts  main.ts  openapi.json  runtime.ts
example/src-tauri/: Cargo.toml  tauri.conf.json
example/src-tauri/src/: main.rs
examples/app/: index.html  package-lock.json  package.json
examples/app/src/: bindings-js-namespaces.ts  bindings-js.js  bindings-jsdoc.js  bindings-ts-namespaces.ts  bindings.ts  bindings2-jsdoc.js  bindings2.ts  main.ts
examples/app/src-tauri/: Cargo.toml  tauri.conf.json
examples/app/src-tauri/capabilities/: main.json
examples/app/src-tauri/src/: bruh.rs  library_service.rs  main.rs
examples/app/src/bindings-js-files/: index.js  tauri.js  tauri_specta_example_app.js
examples/app/src/bindings-js-files/std/: result.js
examples/app/src/bindings-js-files/tauri/: ipc.js
examples/app/src/bindings-js-files/tauri/ipc/: channel.js
examples/app/src/bindings-js-files/tauri_specta_example_app/: nested.js
examples/app/src/bindings-ts-files/: index.ts  tauri_specta_example_app.ts
examples/app/src/bindings-ts-files/std/: result.ts
examples/app/src/bindings-ts-files/tauri/ipc/: channel.ts
examples/app/src/bindings-ts-files/tauri_specta_example_app/: nested.ts
examples/app/src/bindings3/: commands.ts  constants.ts  events.ts  globals.ts  types.ts
examples/app/src/bindings3/commands/: blue_struct.ts  index.ts  library_service.ts  nested.ts
examples/custom-plugin/app/: package.json  tsconfig.json
examples/custom-plugin/app/src/: App.tsx
examples/custom-plugin/app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
examples/custom-plugin/app/src-tauri/capabilities/: main.json
examples/custom-plugin/app/src-tauri/src/: main.rs
examples/custom-plugin/plugin/: Cargo.toml  bindings.ts  build.rs  index.ts  package.json  tsconfig.json
examples/custom-plugin/plugin/permissions/autogenerated/: reference.md
examples/custom-plugin/plugin/permissions/autogenerated/commands/: add_numbers.toml
examples/custom-plugin/plugin/permissions/schemas/: schema.json
examples/custom-plugin/plugin/src/: lib.rs
examples/react-query-app/: index.html  package.json  tsconfig.json  vite.config.js
examples/react-query-app/src/: App.tsx  bindings.ts  main.tsx  style.css
examples/react-query-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/react-query-app/src-tauri/src/: main.rs
examples/rescript/: .gitignore  index.html  package.json  rescript.json  vite.config.js
examples/rescript/src/: Bindings.res  Main.res  style.css
examples/rescript/src-tauri/: Cargo.toml  tauri.conf.json
examples/rescript/src-tauri/capabilities/: main.json
examples/rescript/src-tauri/src/: main.rs
examples/tanstack-query/: index.html  package.json  tsconfig.json
examples/tanstack-query/src/: App.tsx  bindings-js.js  bindings.ts  main.ts  main.tsx
examples/tanstack-query/src-tauri/: Cargo.toml  tauri.conf.json
examples/tanstack-query/src-tauri/src/: main.rs
examples/tanstack-query/src/bindings-ts-files/tauri_specta_example_app/: nested.ts
macros/: Cargo.toml
macros/src/: collect_commands.rs  lib.rs
package/: REAMDE.md  package.json  rollup.config.mjs  tsconfig.json
package/src/: index.ts
patches/: @rescript__webapi@0.1.0-experimental-29b94b3.patch
src/: builder.rs  casing.rs  collate_types.rs  commands.rs  event.rs  export_js.rs  export_openapi.rs  export_ts.rs  globals.js  globals.ts  internal.rs  js.rs  js_ts.rs  lang.rs  lib.rs  macros.rs  manager_ext.rs  name.rs  queries.rs  statics.rs  tanstack.rs  ts.rs  typed_command.rs  typed_command_arg.rs  typed_command_result.rs
src/lang/: globals.js  globals.ts  globals_events.js  globals_events.ts  js.rs  js_ts.rs  rescript.rs  ts.rs
tests/: casing.rs  duplicate_commands.rs  kitchen_sink.rs  option_type_references.rs  tauri.conf.json  tauri_command.rs  test.rs
tests/snapshots/bigints_as_number_jsdoc/: bindings.js
tests/snapshots/bigints_as_number_ts/: bindings.ts
tests/snapshots/commands_only_jsdoc/: bindings.js
tests/snapshots/commands_only_ts/: bindings.ts
tests/snapshots/constants_only_jsdoc/: bindings.js
tests/snapshots/constants_only_ts/: bindings.ts
tests/snapshots/empty_jsdoc/: bindings.js
tests/snapshots/error_data_error_jsdoc/: bindings.js
tests/snapshots/error_data_error_ts/: bindings.ts
tests/snapshots/error_throw_jsdoc/: bindings.js
tests/snapshots/error_throw_ts/: bindings.ts
tests/snapshots/events_only_jsdoc/: bindings.js
tests/snapshots/events_only_ts/: bindings.ts
tests/snapshots/kitchen_sink_files_jsdoc/bindings/: index.js  kitchen_sink.js
tests/snapshots/kitchen_sink_files_ts/bindings/: index.ts  kitchen_sink.ts
tests/snapshots/kitchen_sink_jsdoc/: bindings.js
tests/snapshots/kitchen_sink_namespaces_ts/: bindings.ts
tests/snapshots/kitchen_sink_ts/: bindings.ts
tests/snapshots/no_serde_phases_jsdoc/: bindings.js
tests/snapshots/no_serde_phases_ts/: bindings.ts
tests/snapshots/plugin_jsdoc/: bindings.js
tests/snapshots/plugin_ts/: bindings.ts
