[package]
name = "tauri-specta"
description = "Completely typesafe Tauri commands"
version = "2.0.0-rc.23"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
include = ["/src", "/README.md", "/LICENCE"]
repository = "https://github.com/specta-rs/tauri-specta"
documentation = "https://docs.rs/tauri-specta/latest/tauri-specta"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
derive = ["dep:tauri-specta-macros"]
javascript = ["dep:specta-typescript", "dep:specta-tags"]
typescript = ["dep:specta-typescript", "dep:specta-tags"]

[lints]
workspace = true

[dependencies]
# Public
specta = { workspace = true, features = ["function"] }
specta-typescript = { workspace = true, optional = true }
tauri-specta-macros = { version = "=2.0.0-rc.23", optional = true, path = "./macros" }
serde = "1"
serde_json = "1"
thiserror = "2"
tauri = { workspace = true, features = ["specta"] }

# Private
heck = "0.5"
specta-serde = { workspace = true }
specta-tags = { version = "0.0.0", optional = true }

[workspace]
members = [
    "examples/app/src-tauri",
    "examples/custom-plugin/app/src-tauri",
    "examples/custom-plugin/plugin",
    "macros",
]

[workspace.lints.rust]
unsafe_code = { level = "forbid", priority = -1 }
missing_docs = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
panic = { level = "warn", priority = -1 }
todo = { level = "warn", priority = -1 }
panic_in_result_fn = { level = "warn", priority = -1 }

[workspace.dependencies]
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin = { version = "2" }
specta = { version = "=2.0.0-rc.23", features = ["derive"] }
specta-typescript = { version = "0.0.10" }
specta-serde = { version = "0.0.10" }

# TODO: remove these once released as `.rc-24`
[patch.crates-io]
specta = { git = "https://github.com/specta-rs/specta", rev = "2e769e745686e37b83f7240f2def4360e8113713" }
specta-typescript = { git = "https://github.com/specta-rs/specta", rev = "2e769e745686e37b83f7240f2def4360e8113713" }
specta-serde = { git = "https://github.com/specta-rs/specta", rev = "2e769e745686e37b83f7240f2def4360e8113713" }
specta-tags = { git = "https://github.com/specta-rs/specta", rev = "2e769e745686e37b83f7240f2def4360e8113713" }
