[package]
name = "tauri-specta"
description = "Completely typesafe Tauri commands"
version = "2.0.0-rc.24"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2024"
license = "MIT"
include = ["/src", "/README.md", "/LICENCE"]
repository = "https://github.com/specta-rs/tauri-specta"
documentation = "https://docs.rs/tauri-specta/latest/tauri-specta"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

# /bin/sh RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features
[package.metadata."docs.rs"]
all-features = true
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
derive = []
javascript = ["dep:specta-typescript", "dep:specta-tags"]
typescript = ["dep:specta-typescript", "dep:specta-tags"]

[lints]
workspace = true

[dependencies]
# Public
specta = { workspace = true }
specta-typescript = { workspace = true, optional = true }
tauri-specta-macros = { version = "=2.0.0-rc.24", path = "./macros" }
serde = "1"
serde_json = "1"
thiserror = "2"
tauri = { version = "2", default-features = false, features = ["specta"] }
paste = "1"


# Private
heck = "0.5"
specta-serde = { workspace = true }
specta-tags = { workspace = true, optional = true }

[workspace]
members = [
    "examples/app/src-tauri",
    "examples/custom-plugin/app/src-tauri",
    "examples/custom-plugin/plugin",
    "macros",
]

[workspace.lints.rust]
unsafe_code = { level = "forbid", priority = -1 }
missing_docs = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = { level = "warn", priority = -1 }
panic = { level = "warn", priority = -1 }
todo = { level = "warn", priority = -1 }
panic_in_result_fn = { level = "warn", priority = -1 }

[workspace.dependencies]
tauri = { version = "2" }
tauri-build = { version = "2" }
tauri-plugin = { version = "2" }
specta = { version = "=2.0.0-rc.24", features = ["derive"] }
specta-typescript = { version = "0.0.11" }
specta-serde = { version = "0.0.11" }
specta-tags = { version = "0.0.0" }

[patch.crates-io]
#
# `doc_auto_cfg` deprecation :(
#
tauri = { path = "/Users/oscar/Desktop/tauri/crates/tauri" }

# https://github.com/rust-windowing/winit/commit/d815bc089c37ac525f2ce6f381e758911b273922
dpi = { git = "https://github.com/rust-windowing/winit", rev = "b5252f136632aac27937ad00fbd6764f812d4922" }
