[package]
name = "tauri-specta-macros"
description = "Completely typesafe Tauri commands"
version = "2.0.0-rc.3"
authors = ["Oscar Beaumont <oscar@otbeaumont.me>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oscartbeaumont/tauri-specta"
documentation = "https://docs.rs/tauri-specta/latest/tauri-specta"
keywords = ["async", "specta", "rspc", "typescript", "typesafe"]
categories = ["web-programming", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
heck = "0.4.1"
proc-macro2 = "1.0.67"
quote = "1.0.33"
syn = "2.0.37"
