[package]
name = "tauri-specta-query"
version = "0.0.1"
edition = "2024"

[dependencies]
heck = "0.5"
tauri.workspace = true
specta.workspace = true
serde = "1"
serde_json = "1"
tauri-specta = { version = "=2.0.0-rc.25", path = "../.." }

[dev-dependencies]
specta-typescript.workspace = true
tauri-specta = { path = "../..", features = ["typescript"] }

[lints]
workspace = true
