[package]
name = "example"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
publish = false

[build-dependencies]
tauri-build = { version = "1.3.0", features = [] }

[dependencies]
serde_json = "1.0"
specta.workspace = true
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3.0", features = ["api-all"] }
tauri-specta = { path = "../../", features = ["typescript", "javascript"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
