[package]
name = "tauri-specta-example-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
publish = false

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde_json = "1.0"
specta = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tauri = { workspace = true, features = [] }
tauri-specta = { path = "../../../", features = ["derive", "typescript", "javascript"] }
specta-typescript = { workspace = true }
specta-jsdoc = { workspace = true }
tauri-plugin-os = "^2.0.0-alpha.2"
thiserror = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
