[package]
name = "souchy-tauri-specta-example-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"
publish = false

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde_json = "1.0"
specta = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tauri = { workspace = true, features = [] }
souchy-tauri-specta = { path = "../../../", features = ["derive", "typescript", "javascript"] }
specta-typescript = { workspace = true }
specta-jsdoc = { workspace = true }
tauri-plugin-os = "^2.0.0-alpha.2"
thiserror = "1"
tokio = { version = "1", features = ["sync"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
