[package]
name = "tauri-specta-example-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2024"
publish = false

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
serde_json = "1.0"
specta = { workspace = true, features = ["bytes", "chrono", "url"] }
serde = { version = "1.0", features = ["derive"] }
tauri = { workspace = true, features = ["default"] }
tauri-specta = { path = "../../../", features = ["derive", "typescript", "javascript"] }
specta-typescript = { workspace = true }
tauri-plugin-os = "^2.3.2"
thiserror = "2"
bytes = { version = "1.12.0", features = ["serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
url = { version = "2.5.8", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
